Work on command line tools: SVN difftool, git backup URL validator